// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BreadcrumbContainer renders a driver site correctly with intermediate breadcrumb and with project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-4::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-4:active:before,
.emotion-4:hover:before,
.emotion-4:focus:before,
.emotion-4[data-hover='true']:before,
.emotion-4[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:active,
.emotion-4:hover,
.emotion-4[data-hover='true'] {
  color: #001E2B;
}

.emotion-4:active::before,
.emotion-4:hover::before,
.emotion-4[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-4:focus-visible::before,
.emotion-4[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-5 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  display: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-4"
      tabindex="0"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-label="Ellipsis Icon"
          class="emotion-6"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-7"
    />
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/usage-examples/"
        target="_self"
      >
        <span>
          Usage Examples
        </span>
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-4::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-4:active:before,
.emotion-4:hover:before,
.emotion-4:focus:before,
.emotion-4[data-hover='true']:before,
.emotion-4[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:active,
.emotion-4:hover,
.emotion-4[data-hover='true'] {
  color: #001E2B;
}

.emotion-4:active::before,
.emotion-4:hover::before,
.emotion-4[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-4:focus-visible::before,
.emotion-4[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-5 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  display: none;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-4"
      tabindex="0"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-label="Ellipsis Icon"
          class="emotion-6"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-7"
    />
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/"
        target="_self"
      >
        <span>
          C#/.NET Driver
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/usage-examples/"
        target="_self"
      >
        <span>
          Usage Examples
        </span>
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3[data-hover='true'],
.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover,
.emotion-3[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/languages"
          target="_self"
        >
          <span>
            Languages
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/languages/csharp/"
          target="_self"
        >
          <span>
            C#/.NET
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/"
          target="_self"
        >
          <span>
            C#/.NET Driver
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/languages/csharp/csharp-driver/usage-examples/"
          target="_self"
        >
          <span>
            Usage Examples
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly as a docs homepage 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-4::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-4:active:before,
.emotion-4:hover:before,
.emotion-4:focus:before,
.emotion-4[data-hover='true']:before,
.emotion-4[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:active,
.emotion-4:hover,
.emotion-4[data-hover='true'] {
  color: #001E2B;
}

.emotion-4:active::before,
.emotion-4:hover::before,
.emotion-4[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-4:focus-visible::before,
.emotion-4[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-5 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  display: none;
}

.emotion-9 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-9:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-9:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-4"
      tabindex="0"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-label="Ellipsis Icon"
          class="emotion-6"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-7"
    />
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-9"
    >
      <a
        class="emotion-10"
        href="/sdk/cpp/application-services"
        target="_self"
      >
        Application Services - C++ SDK
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-4:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-8>span>code,
.emotion-8>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-8:focus,
.emotion-8:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-8:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-8:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-8"
        href="/sdk/cpp"
        target="_self"
      >
        Atlas Device SDK for C++
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-8"
        href="/sdk/cpp/application-services"
        target="_self"
      >
        Application Services - C++ SDK
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3[data-hover='true'],
.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover,
.emotion-3[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-5:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-9>span>code,
.emotion-9>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-9:focus,
.emotion-9:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-9:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-9:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/device-sdks/"
          target="_self"
        >
          <span>
            MongoDB Atlas Device SDKs
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp"
          target="_self"
        >
          Atlas Device SDK for C++
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp/application-services"
          target="_self"
        >
          Application Services - C++ SDK
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with intermediate breadcrumb, no project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-7 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-7:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-7:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/"
        target="_self"
      >
        <span>
          MongoDB Atlas
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-7"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-7 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-7:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-7:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/"
        target="_self"
      >
        <span>
          MongoDB Atlas
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-7"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3[data-hover='true'],
.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover,
.emotion-3[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-8 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-8:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-8:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/"
          target="_self"
        >
          <span>
            MongoDB Atlas
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-8"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/device-sdks/"
          target="_self"
        >
          <span>
            MongoDB Atlas Device SDKs
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BreadcrumbContainer renders correctly with no intermediate breadcrumbs, has project parents 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  border: none;
  -webkit-appearance: unset;
  padding: unset;
  display: inline-block;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: 150ms ease-in-out;
  transition: 150ms ease-in-out;
  transition-property: color,box-shadow;
  background-color: rgba(255, 255, 255, 0);
  height: 28px;
  width: 28px;
  color: #5C6C75;
}

.emotion-4::before {
  content: '';
  -webkit-transition: 150ms all ease-in-out;
  transition: 150ms all ease-in-out;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 100%;
  -webkit-transform: scale(0.8);
  -moz-transform: scale(0.8);
  -ms-transform: scale(0.8);
  transform: scale(0.8);
}

.emotion-4:active:before,
.emotion-4:hover:before,
.emotion-4:focus:before,
.emotion-4[data-hover='true']:before,
.emotion-4[data-focus='true']:before {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.emotion-4:focus {
  outline: none;
}

.emotion-4:active,
.emotion-4:hover,
.emotion-4[data-hover='true'] {
  color: #001E2B;
}

.emotion-4:active::before,
.emotion-4:hover::before,
.emotion-4[data-hover='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-4:focus-visible,
.emotion-4[data-focus='true'] {
  color: #001E2B;
  box-shadow: 0 0 0 2px #FFFFFF,0 0 0 4px #0498EC;
}

.emotion-4:focus-visible::before,
.emotion-4[data-focus='true']::before {
  background-color: rgba(61,79,88,0.1);
}

.emotion-5 {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.emotion-7 {
  display: none;
}

.emotion-9 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-9:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-9:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-10>span>code,
.emotion-10>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-10:focus,
.emotion-10:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-10:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-10:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-10:hover,
.emotion-10:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <button
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      aria-label="Show all breadcrumbs"
      class="emotion-4"
      tabindex="0"
    >
      <div
        class="emotion-5"
      >
        <svg
          aria-label="Ellipsis Icon"
          class="emotion-6"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            clip-rule="evenodd"
            d="M2.75 6C3.7165 6 4.5 6.7835 4.5 7.75C4.5 8.7165 3.7165 9.5 2.75 9.5C1.7835 9.5 1 8.7165 1 7.75C1 6.7835 1.7835 6 2.75 6ZM7.75 6C8.7165 6 9.5 6.7835 9.5 7.75C9.5 8.7165 8.7165 9.5 7.75 9.5C6.7835 9.5 6 8.7165 6 7.75C6 6.7835 6.7835 6 7.75 6ZM14.5 7.75C14.5 6.7835 13.7165 6 12.75 6C11.7835 6 11 6.7835 11 7.75C11 8.7165 11.7835 9.5 12.75 9.5C13.7165 9.5 14.5 8.7165 14.5 7.75Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </button>
    <span
      class="emotion-7"
    />
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-9"
    >
      <a
        class="emotion-10"
        href="/sdk/cpp/application-services"
        target="_self"
      >
        Application Services - C++ SDK
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 480px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 480px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

.emotion-1 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-1:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-1:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-2 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-2:hover,
.emotion-2[data-hover='true'],
.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2:hover,
.emotion-2[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-2:focus-visible,
.emotion-2[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-2>span>code,
.emotion-2>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-2:hover,
.emotion-2:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-3 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-4 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-4:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-4:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-8>span>code,
.emotion-8>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-8:focus,
.emotion-8:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-8:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-8:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-8:hover,
.emotion-8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/"
        target="_self"
      >
        <span>
          Docs Home
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="lg-ui-0001 emotion-2"
        href="https://www.mongodb.com/docs/atlas/device-sdks/"
        target="_self"
      >
        <span>
          MongoDB Atlas Device SDKs
        </span>
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-8"
        href="/sdk/cpp"
        target="_self"
      >
        Atlas Device SDK for C++
      </a>
    </div>
    <span
      class="emotion-3"
    >
       / 
    </span>
    <div
      class="emotion-4"
    >
      <a
        class="emotion-8"
        href="/sdk/cpp/application-services"
        target="_self"
      >
        Application Services - C++ SDK
      </a>
    </div>
  </div>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

@media only screen and (max-width: 1024px) {
  .emotion-0 {
    display: none;
  }
}

@media not all and (max-width: 1024px) {
  .emotion-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  overflow: hidden;
  white-space: nowrap;
}

.emotion-2:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-2:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-3 {
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  cursor: pointer;
  font-size: inherit;
  line-height: inherit;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background: none;
  border: none;
  padding: 0;
  font-size: 13px;
  line-height: 20px;
  color: #016BF8;
  font-weight: 400;
  display: inline;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-3:hover,
.emotion-3[data-hover='true'],
.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-3:focus {
  outline: none;
}

.emotion-3:hover,
.emotion-3[data-hover='true'] {
  text-decoration-color: #E8EDEB;
}

.emotion-3:focus-visible,
.emotion-3[data-focus='true'] {
  text-decoration-color: #016BF8;
}

.emotion-3>span>code,
.emotion-3>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-3:hover,
.emotion-3:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-4 {
  cursor: default;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-5 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.emotion-5:first-child {
  min-width: -webkit-max-content;
  min-width: -moz-max-content;
  min-width: max-content;
}

@media not all and (max-width: 480px) {
  .emotion-5:last-child {
    min-width: -webkit-max-content;
    min-width: -moz-max-content;
    min-width: max-content;
  }
}

.emotion-9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-decoration-color: transparent;
  line-height: 13px;
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
  font-size: 13px;
  vertical-align: middle;
  line-height: unset;
  font-weight: 400;
}

.emotion-9>span>code,
.emotion-9>code {
  color: var(--link-color-primary);
  font-weight: var(--link-font-weight);
}

.emotion-9:focus,
.emotion-9:hover {
  text-decoration-line: underline;
  -webkit-transition: text-decoration 150ms ease-in-out;
  transition: text-decoration 150ms ease-in-out;
  text-underline-offset: 4px;
  text-decoration-thickness: 2px;
}

.emotion-9:focus {
  text-decoration-color: #016BF8;
  outline: none;
}

.emotion-9:hover {
  text-decoration-color: #E8EDEB;
}

.emotion-9:hover,
.emotion-9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/"
          target="_self"
        >
          <span>
            Docs Home
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="lg-ui-0001 emotion-3"
          href="https://www.mongodb.com/docs/atlas/device-sdks/"
          target="_self"
        >
          <span>
            MongoDB Atlas Device SDKs
          </span>
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp"
          target="_self"
        >
          Atlas Device SDK for C++
        </a>
      </div>
      <span
        class="emotion-4"
      >
         / 
      </span>
      <div
        class="emotion-5"
      >
        <a
          class="emotion-9"
          href="/sdk/cpp/application-services"
          target="_self"
        >
          Application Services - C++ SDK
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
